# openlr

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  rustfmt.toml
.github/workflows/: rust.yml
src/: binary.rs  decoder.rs  decoder_graph.rs  dijkstra.rs  encoder.rs  error.rs  format.rs  graph.rs  lib.rs  location.rs  model.rs  path.rs  reader.rs  routing.rs
src/binary/: encoding.rs  reader.rs  writer.rs
src/decoder/: candidates.rs  line.rs  resolver.rs  route.rs  shortest_path.rs
src/encoder/: expansion.rs  line.rs  lrp.rs  resolver.rs  shortest_path.rs
src/format/: binary.rs
src/format/binary/: encoding.rs  reader.rs  writer.rs
src/graph/: dijkstra.rs  path.rs
src/graph/tests/: geojson.rs  graph.geojson  network.rs
src/routing/: dijkstra.rs  route.rs
tests/: binary_encoding.rs  binary_format.rs  binary_serialization.rs  decoder.rs  encoder.rs  location.rs  routing.rs
tests/data/: graph copy.geojson  graph-test-code.geojson  lines.txt
tests/graph/: geojson.rs  mod.rs  network.rs
