[package]
name = "openlr"
version = "0.2.0"
edition = "2024"
description = "OpenLR Rust implementation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/geopinionated/openlr"
readme = "README.md"
keywords = ["openlr", "routing", "routing-engine"]
categories = ["encoding"]

[dependencies]
approx = "0.5"
base64 = "0.22"
thiserror = "2.0"

tracing = "0.1"

# dev-dependencies
geo = "0.30"
geojson = "0.24"
graph = "0.3"
ordered-float = "5.0"
rstar = "0.12"
strum = { version = "0.27", features = ["derive"] }
#typed-index-collections = "3.3"
test-log = { version = "0.2", features = ["trace"] }