[package]
name = "openlr"
version = "0.2.0"
edition = "2024"
description = "OpenLR Rust implementation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/geopinionated/openlr"
readme = "README.md"
keywords = ["openlr", "routing", "routing-engine"]
categories = ["encoding"]

[dependencies]
approx = "0.5"
base64 = "0.22"
thiserror = "2.0"
